# FuzzPhantom

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_gui.py
core/: __init__.py  context.py  logger.py  matchers.py  raw_request.py  session.py
docs/: FuzzPhantom_Documentation.md
gui/: __init__.py  app.py  scanner.py
gui/static/: index.html
gui/static/css/: style.css
gui/static/js/: app.js
modules/: __init__.py  api_discovery.py  crawler.py  dir_fuzzer.py  fuzzer.py  subdomain.py  wordlist_gen.py
payloads/: generic.txt  lfi.txt  sqli.txt  xss.txt
reporting/: __init__.py  flat_exports.py  json_export.py  pdf_export.py  reporter.py
reporting/formats/: __init__.py  bugcrowd.py  hackerone.py  intigriti.py
reports/: smart_wordlist.txt
scripts/: local_benchmark.py
tests/: test_dir_word_mutation.py  test_matchers.py  test_subdomain.py
wordlists/: api_paths.txt  bootstrap.py  demo_testfire.txt  demo_testphp.txt  directories.txt.bak  params.txt  subdomains.txt
