[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzphantom"
version = "1.0.0"
description = "Async URL fuzzing and web reconnaissance toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.4",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "dnspython>=2.4.0",
    "tldextract>=5.1.0",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0",
    "colorama>=0.4.6",
    "pyfiglet>=1.0.2",
    "reportlab>=4.2.0",
]

[project.scripts]
fuzzphantom = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "build>=1.2.0",
    "pypdf>=6.0.0",
]

[tool.setuptools]
py-modules = ["main", "run_gui"]

[tool.setuptools.packages.find]
include = ["core*", "modules*", "reporting*", "gui*"]
